force-app/main/default/objects/Course_Development__c/Course_Development__c.object-meta.xml
<CustomObject>
    <description>draft process Nov 28, Easton</description>
    <label>Course Development</label>
    <nameField>
        <label>Course Development Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Development</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>