force-app/main/default/objects/Course_Development__c/fields/Automated_Next_Development_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Automated_Next_Development_Deadline__c</fullName>
    <formula>Date_of_Last_Course_Development__c + 3*365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated Next Development Deadline</label>
    <type>Date</type>
</CustomField>