force-app/main/default/objects/Course_Development__c/fields/CD_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>CD_AutoNumber__c</fullName>
    <description>Created to add some specificity to the record naming process: A helper field that should not be on the layout, this is used in conjunction with the naming convention field.</description>
    <displayFormat>{00000}</displayFormat>
    <label>CD AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>