force-app/main/default/objects/Course_Development__c/fields/CD_Naming_Formula__c.field-meta.xml
<CustomField>
    <fullName>CD_Naming_Formula__c</fullName>
    <formula>&quot;CourseDev&quot; &amp; &quot; - &quot; &amp; LEFT( Course__r.Name, 30) &amp; &quot; - &quot; &amp; CD_AutoNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CD Naming Formula</label>
    <type>Text</type>
</CustomField>