force-app/main/default/objects/Course_Development__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Course Development</relationshipLabel>
    <relationshipName>Course_Development</relationshipName>
    <type>Lookup</type>
</CustomField>