force-app/main/default/objects/Course_Development__c/fields/Course_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>Course_Development_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this is the CRPS employee currently managing this Course Development</description>
    <inlineHelpText>this is the CRPS employee currently managing this Course Development</inlineHelpText>
    <label>Course Development Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Development</relationshipName>
    <type>Lookup</type>
</CustomField>