force-app/main/default/objects/Course_Development__c/fields/Date_of_Last_Course_Development__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Course_Development__c</fullName>
    <label>Date of Last Course Development</label>
    <type>Date</type>
</CustomField>