force-app/main/default/objects/Course_Development__c/fields/Deadline_for_Next_Course_Development__c.field-meta.xml
<CustomField>
    <fullName>Deadline_for_Next_Course_Development__c</fullName>
    <label>Deadline Next Course Dev</label>
    <type>Date</type>
</CustomField>