force-app/main/default/objects/Course_Development__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Course Development</relationshipLabel>
    <relationshipName>Course_Development</relationshipName>
    <type>Lookup</type>
</CustomField>