force-app/main/default/objects/Course_Development__c/fields/Freshservice_Integration_Link__c.field-meta.xml
<CustomField>
    <fullName>Freshservice_Integration_Link__c</fullName>
    <description>URL to the related ticket</description>
    <inlineHelpText>URL to the related ticket</inlineHelpText>
    <label>Freshservice Integration</label>
    <type>Url</type>
</CustomField>