force-app/main/default/objects/Course_Development__c/fields/Green_Or_Gold__c.field-meta.xml
<CustomField>
    <fullName>Green_Or_Gold__c</fullName>
    <label>Set the QM level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggie Orange</fullName>
                <default>true</default>
                <label>Aggie Orange</label>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>