force-app/main/default/objects/Course_Development__c/fields/GreenOrGoldImage__c.field-meta.xml
<CustomField>
    <fullName>GreenOrGoldImage__c</fullName>
    <formula>CASE( Green_Or_Gold__c,  
&quot;Green&quot;, IMAGE(&quot;https://brand.colostate.edu/wp-content/uploads/sites/47/2019/01/Ram-Logo-Pantone-357-617-768x768.jpg&quot;, &quot;Green&quot;, 50, 50),  
&quot;Gold&quot;, IMAGE(&quot;https://sportslogohistory.com/wp-content/uploads/2022/03/colorado_state_rams_2021-presa-1.png&quot;, &quot;Gold&quot;, 50, 50),  
&quot;Aggie Orange&quot;, IMAGE(&quot;https://brand.colostate.edu/wp-content/uploads/sites/47/2019/01/Rams-Logo-Demo-Pantone-Reversed-one-color-768x911.png&quot;, &quot;Aggie Orange&quot;, 50, 50), 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Matters</label>
    <type>Text</type>
</CustomField>