force-app/main/default/objects/Course_Development__c/fields/Partner_Management__c.field-meta.xml
<CustomField>
    <fullName>Partner_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Management</label>
    <referenceTo>Partner_Management__c</referenceTo>
    <relationshipLabel>Course Development</relationshipLabel>
    <relationshipName>Course_Development</relationshipName>
    <type>Lookup</type>
</CustomField>