force-app/main/default/objects/Course_Development__c/fields/Primary_Dept_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dept_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Program, Dept, or College, whomever is your primary contact</inlineHelpText>
    <label>Primary Dept Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Development</relationshipLabel>
    <relationshipName>Course_Development</relationshipName>
    <type>Lookup</type>
</CustomField>