force-app/main/default/objects/Course_Development__c/fields/Prior_Course_Development_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Prior_Course_Development_Mgr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Course Development Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Development1</relationshipName>
    <type>Lookup</type>
</CustomField>