force-app/main/default/objects/Course_Development__c/fields/Reminder_Start_Date_Next_Course_Dev__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Start_Date_Next_Course_Dev__c</fullName>
    <formula>Start_Date_Next_Course_Dev__c - 120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder Start Date Next Course Dev</label>
    <type>Date</type>
</CustomField>