force-app/main/default/objects/Course_Development__c/fields/Start_Date_Next_Course_Dev__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Next_Course_Dev__c</fullName>
    <formula>Deadline_for_Next_Course_Development__c - 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Next Course Dev</label>
    <type>Date</type>
</CustomField>