force-app/main/default/objects/Course_Development__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Last_Course_Development__c</columns>
    <columns>GreenOrGoldImage__c</columns>
    <columns>Deadline_for_Next_Course_Development__c</columns>
    <columns>Course_Development_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Synopsis__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>